--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
         android:text="Play Now!"
         android:id="@+id/play"
         android:layout_centerHorizontal="true"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:onClick="play"
+        />
 
     <Button
         android:layout_width="wrap_content"
