--- a/app/src/main/res/layout/activity_level_selection.xml
+++ b/app/src/main/res/layout/activity_level_selection.xml
@@ -42,5 +42,25 @@
             android:layout_column="2"
             android:onClick="levelThree"
             />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/level_three"
+            android:id="@+id/button4"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:onClick="levelFour"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/level_three"
+            android:id="@+id/button5"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:onClick="levelFive"
+            />
     </GridLayout>
 </RelativeLayout>
