--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="3"
-    android:layout_centerVertical="true"
-    android:layout_centerHorizontal="true"
     tools:context="ca.horatiu.decanting.MainActivity">
 
-    <Button
+    <!-- <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -36,5 +34,43 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/play"
         android:text="About"
-        android:layout_weight="1" />
+        android:layout_weight="1" /> -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_above="@+id/highscores"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/highscores"
+            android:layout_alignRight="@+id/highscores"
+            android:text="Play Now!"
+            android:id="@+id/play"
+            android:onClick="play"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="High Scores"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/highscores"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
+            android:onClick="highscores"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/highscores"
+            android:layout_alignLeft="@+id/highscores"
+            android:layout_alignRight="@+id/highscores"
+            android:text="About"
+            android:id="@+id/button3"
+            android:onClick="about"
+
+            android:layout_gravity="|center_horizontal" />
+    </RelativeLayout>
 </LinearLayout>
