--- a/app/src/main/res/layout/activity_level_selection.xml
+++ b/app/src/main/res/layout/activity_level_selection.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/background_grey"
     tools:context="ca.horatiu.decanting.LevelSelection">
 
     <RelativeLayout
@@ -20,8 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:text="@string/level_selection"
+            android:textColor="#2196f3"
             android:id="@+id/title"
             android:textSize="@dimen/text_size_medium"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
 
         <Button
