--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="3"
+    android:background="@drawable/background_grey"
     tools:context="ca.horatiu.decanting.MainActivity">
 
     <!-- <Button
@@ -38,6 +39,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/main_menu"
+            android:layout_centerHorizontal="true"
+            android:textColor="#2196f3"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            />
+
 
         <Button
             android:layout_above="@+id/highscores"
@@ -70,5 +80,19 @@
             android:text="@string/about"
             android:id="@+id/button3"
             android:onClick="about" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/highscores"
+            android:src="@drawable/water_jug"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/highscores"
+            android:src="@drawable/empty_jug"
+            />
     </RelativeLayout>
 </LinearLayout>
