--- a/app/src/main/res/layout/activity_completed_level.xml
+++ b/app/src/main/res/layout/activity_completed_level.xml
@@ -35,15 +35,34 @@
             android:layout_column="0"
             android:layout_gravity="center_horizontal" />
 
+
+
+    </GridLayout>
+
+    <LinearLayout
+        android:id="@+id/LinearLayout02"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        >
         <Button
+            android:id="@+id/retry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Continue"
-            android:id="@+id/button4"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:onClick="retry"
+            android:text="Try Again">
+        </Button>
+        <Button
+            android:id="@+id/levelSelection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:onClick="levelSelection"
-            />
-    </GridLayout>
+            android:text="Continue">
+        </Button>
+    </LinearLayout>
+
+
 </RelativeLayout>
