--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,7 +21,9 @@
             android:text="About Decanting"
             android:id="@+id/textView2"
             android:layout_row="0"
-            android:layout_column="0" />
+            android:layout_column="0"
+
+            />
 
         <TextView
             android:layout_width="wrap_content"
