--- a/app/src/main/res/layout/activity_completed_level.xml
+++ b/app/src/main/res/layout/activity_completed_level.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="@dimen/text_size_large"
             android:text="Congratulations!"
             android:id="@+id/congratulations"
             android:layout_row="0"
