Add reset highscores

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -85,13 +85,13 @@
 
     </GridLayout>
 
-    <Button
+    <!--<Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Clear Highscores"
         android:id="@+id/button2"
         android:onClick="clearDB"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" /> -->
 
 </RelativeLayout>
