--- a/app/src/main/res/layout/activity_highscores.xml
+++ b/app/src/main/res/layout/activity_highscores.xml
@@ -15,11 +15,21 @@
         android:orientation="vertical"
         >
 
-    <GridLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="✗"
+            android:onClick="resetDB"
+            android:clickable="true"
+            android:id="@+id/restart"
+            android:layout_alignParentRight="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,10 +38,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/highscores"
             android:id="@+id/textView4"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_gravity="center_horizontal" />
-    </GridLayout>
+            android:layout_centerInParent="true" />
+
+
+
+
+
+    </RelativeLayout>
 
         <ScrollView android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -47,15 +60,15 @@
                     android:layout_height="fill_parent">
                     <TextView
                         android:text="Level"
-                        android:paddingRight="8dp"
+                        android:paddingRight="5dp"
                         android:layout_width="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:layout_height="wrap_content"
                         android:layout_column="1" />
 
                     <TextView
-                        android:paddingLeft="8dp"
-                        android:paddingRight="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:text="Player"
                         android:minWidth="100px"
                         android:layout_width="wrap_content"
@@ -64,8 +77,8 @@
                         android:layout_column="2" />
 
                     <TextView
-                        android:paddingLeft="8dp"
-                        android:paddingRight="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:text="Moves"
                         android:minWidth="100px"
                         android:layout_width="wrap_content"
@@ -74,8 +87,8 @@
                         android:layout_column="3" />
 
                     <TextView
-                        android:paddingLeft="8dp"
-                        android:paddingRight="8dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
                         android:text="Date"
                         android:minWidth="100px"
                         android:layout_width="wrap_content"
@@ -84,7 +97,7 @@
                         android:layout_column="4" />
 
                     <TextView
-                        android:paddingLeft="8dp"
+                        android:paddingLeft="5dp"
                         android:text="Performance Rating"
                         android:layout_width="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
